--- a/src/main/resources/templates/thymeleafEx/viewEx01.html
+++ b/src/main/resources/templates/thymeleafEx/viewEx01.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <p th:text="${data}">(덮어쓰기느낌)호호하</p>
+    <p th:text="${data}">호호호</p>
 </body>
 </html>
