--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -3,6 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
+<!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
     <style>
         .fieldError {
@@ -13,7 +14,6 @@
 
 <!-- 사용자 스크립트 추가 -->
 <th:block layout:fragment="script">
-
     <script th:inline="javascript">
         $(document).ready(function(){
             var errorMessage = [[${errorMessage}]];
@@ -22,31 +22,28 @@
             }
         });
     </script>
-
 </th:block>
 
 <div layout:fragment="content">
-    <!-- 이 폼은 memberFormDto로 정보를 받겠다는 의미 -->
     <form action="/members/new" role="form" method="post" th:object="${memberFormDto}">
         <div class="form-group">
             <label th:for="name">이름</label>
-            <!-- *{name}은 memberFormDto의 name을 의미한다. -->
-            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력 해주세요!">
+            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해 주세요.">
             <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
             <label th:for="email">이메일</label>
-            <input type="text" th:field="*{email}" class="form-control" placeholder="이메일을 입력 해주세요!">
+            <input type="text" th:field="*{email}" class="form-control" placeholder="이메일을 입력해 주세요.">
             <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
             <label th:for="password">비밀번호</label>
-            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력 해주세요!">
+            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀 번호를 입력해 주세요.">
             <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
             <label th:for="address">주소</label>
-            <input type="text" th:field="*{address}" class="form-control" placeholder="주소를 입력 해주세요!">
+            <input type="text" th:field="*{address}" class="form-control" placeholder="주소를 입력해 주세요.">
             <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="fieldError">Incorrect data</p>
         </div>
 
